# cutesticky

./: .gitignore  README.md  design-jelly-glass.html  index.html  package-lock.json  package.json  session-transcript.jsonl  vite.config.ts
.github/workflows/: release.yml
assets/branding/: README.md
docs/: releasing.md
docs/prd/: game-arcade-prd.md
public/: manifest.webmanifest  offline.html  sw.js
scripts/: prepare-release.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AiChat.vue  DataBackup.vue  GameArcade.vue  LinkList.vue  MemoArea.vue  NotesView.vue  PomodoroTimer.vue  PwaUpdatePrompt.vue  TodoList.vue  UpdatePrompt.vue  WeatherView.vue
src/data/: backup.ts  index.ts  migrations.ts  repository.ts  sample.ts  schema.ts
src/data/__tests__/: backup.test.ts
src/games/: BreakoutGame.vue  MarioGame.vue  ShooterGame.vue  SnakeGame.vue  SokobanGame.vue  TetrisGame.vue  audio.ts  highscore.ts  registry.ts
src/games/__tests__/: audio.test.ts  breakout.test.ts  shooter.test.ts  snake.test.ts  sokoban.test.ts  tetris.test.ts
src/games/logic/: breakout.ts  (+4 more)
src/platform/: index.ts  pwa.ts  serialization.ts  tauri.ts  types.ts  web.ts
src/services/: llm.ts  notesLogic.ts  notesStore.ts  pomodoroLogic.ts  pomodoroStore.ts  stickyStore.ts  todoLogic.ts  todoStore.ts  updateService.ts  weatherLogic.ts
tests/: capabilities.test.ts  focusViewsLayout.test.ts  layout.test.ts  updateFlow.test.ts  updateService.test.ts
(+7 files in other folders)
