[package]
name = "app"
version = "0.2.1"
description = "A lightweight local-first sticky notes and focus companion"
authors = ["Aley3567"]
license = ""
repository = "https://github.com/Aley3567/cutesticky"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1"
tauri = { version = "2.11.2", features = ["image-png", "macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-shell = "2.3.5"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
window-vibrancy = "0.7"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
